name: ozweb
version: 1.1
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: http://dankna.com/issues/create/
category: Language, Database
synopsis: Full parser and generator for SQL as implemented by SQLite3
description:
  This is a full parser and generator for SQL as implemented by SQLite3.
  It is well-typed in the sense that it is possible to construct an
  abstract syntax tree if and only if it corresponds to valid SQL.
  
  Version 1.1 adds support for parsing and generating type affinities.

Source-Repository head
  type: darcs
  location: http://dankna.com/software/darcs/language-sqlite/

Executable ozweb
  main-is: Ozweb.hs
  hs-source-dirs: Haskell
  build-depends: base >= 4.1 && < 5
