name: ozweb
version: 1.1
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: http://dankna.com/issues/create/
category: Language, Database
synopsis: Full parser and generator for SQL as implemented by SQLite3
description:
  This is a full parser and generator for SQL as implemented by SQLite3.
  It is well-typed in the sense that it is possible to construct an
  abstract syntax tree if and only if it corresponds to valid SQL.
  
  Version 1.1 adds support for parsing and generating type affinities.

Source-Repository head
  type: darcs
  location: http://dankna.com/software/darcs/language-sqlite/

Executable ozweb
  main-is: Ozweb.hs
  other-modules: Database,
                 Schema,
                 Timestamp
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.0.2 && < 1,
                 base >= 4.1 && < 5,
                 binary >= 0.5.1.0 && < 1,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 language-sqlite >= 1.1 && < 2,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1
