name: ozweb
version: 1.1
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: http://dankna.com/issues/create/
category: Database
synopsis: Web service engine
description:
  This is a program which runs a data-access web service.  The database
  layer is implemented using SQLite and an object-relational mapping with
  a nontraditional multiple-inheritance model.

Source-Repository head
  type: darcs
  location: http://dankna.com/software/darcs/language-sqlite/

Executable ozweb
  main-is: Ozweb.hs
  other-modules: Database,
                 JSON,
                 Schema,
                 Timestamp,
                 Trace
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.0.2 && < 1,
                 base >= 4.1 && < 5,
                 binary >= 0.5.1.0 && < 1,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 language-sqlite >= 1.1 && < 2,
                 mtl >= 2.1 && < 3,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1,
                 unordered-containers >= 0.2.3.0 && < 1

